Implement validation flow for BLAST_TOOL task #1 : -Used MessageHelper for messages in exceptions -Messages for exceptions moved to messages.properties -Provided refactoring for test to keep them relevant